--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,21 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.app
     ports:
       - "5173:5173"
     volumes:
       - ./app:/app
       - /app/node_modules
+
+  server:
+    build:
+      context: .
+      dockerfile: Dockerfile.server
+    ports:
+      - "5050:5050"
+    volumes:
+      - ./server:/server
+      - /server/node_modules
+
+
