--- a/compose.yaml
+++ b/compose.yaml
@@ -34,10 +34,11 @@ services:
       - "traefik.http.routers.redirs.middlewares=redirect-to-https"
     networks:
       - app-network
+
   app:
     build:
       context: .
-      dockerfile: Dockerfile.app
+      dockerfile: Dockerfile.app.prod
     depends_on:
       - reverse-proxy
     ports:
@@ -51,13 +52,12 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.app.rule=Host(`mern-front.johanna-stoicanescu.com`)"
       - "traefik.http.routers.app.entrypoints=websecure"
-
       - "traefik.http.routers.app.tls.certresolver=myresolver"
 
   server:
     build:
       context: .
-      dockerfile: Dockerfile.server
+      dockerfile: Dockerfile.server.prod
     ports:
       - "5050:5050"
     depends_on:
@@ -78,28 +78,10 @@ services:
     ports:
       - 27017:27017
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
     networks:
       - app-network
-
-  # mongo-express:
-  #   image: mongo-express
-  #   ports:
-  #     - 8081:8081
-  #   environment:
-  #     ME_CONFIG_MONGODB_ADMINUSERNAME: root
-  #     ME_CONFIG_MONGODB_ADMINPASSWORD: example
-  #     ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-  #     ME_CONFIG_BASICAUTH: false
-  #   depends_on:
-  #     - mongo
-  #   networks:
-  #     - app-network
-  #   labels:
-  #     - "traefik.enable=true"
-  #     - "traefik.http.routers.mongo-express.rule=Host(`mongo-express.localhost`)"
-  #     - "traefik.http.services.mongo-express.loadbalancer.server.port=8081"
 
 networks:
   app-network:
